Fix market data mapping and portfolio allocation UI